# EiketsuLeaderboard

./: .gitignore  AGENTS.md  README.md
.github/: pull_request_template.md
.github/workflows/: deploy.yml  web-ci.yml
apps/tool/: .gitignore  AGENTS.md  README.md  pyproject.toml
apps/tool/alembic/versions/: 20260613_0009_battle_festival_scope.py  20260613_0010_contribution_mode_scope.py  20260614_0011_festival_period_source.py
apps/tool/deploy/pyinstaller/: EiketsuCollector.spec
apps/tool/src/eiketsu_env/: __init__.py  cli.py  client_cli.py  client_gui.py  config.py
apps/tool/src/eiketsu_env/db/: models.py
apps/tool/src/eiketsu_env/services/: auto_tasks.py  automation_runtime.py  battle_festival.py  browser_session.py  client_lock.py  client_upload.py  collector.py  mode_filter.py  parsers.py  share.py  video_search.py  windows_startup.py  windows_tray.py
apps/tool/tests/: test_auto_tasks.py  test_automation_runtime.py  test_battle_festival.py  test_browser_session.py  test_client_gui.py  test_client_lock.py  test_client_upload.py  test_collector.py  test_config.py  test_parsers.py  test_share.py  test_windows_startup.py  test_windows_tray.py
apps/web/: index.html  package-lock.json  package.json  vite.config.ts
docs/: battle-festival-checklist.md  deck-classification-v2.md  deploy-self-hosted-runner.md  ui-review-workflow.md  web-design-v1.md  页面戒律.md
docs/003-web-pages/: component-contract.md  design-tokens.md  page-patterns.md  ui-contract.md  visual-acceptance.md
prototypes/: AGENTS.md
specs/: 002-deck-classification.md  003-web-pages.md
(+119 files in other folders)
