[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eiketsu-collector-tool"
version = "0.2.6"
description = "Eiketsu Collector client tool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14.1,<2.0.0",
  "beautifulsoup4>=4.12.3,<5.0.0",
  "sqlalchemy>=2.0.38,<3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4,<9.0.0",
]
client-build = [
  "pyinstaller>=6.0.0,<7.0.0",
]

[project.scripts]
eiketsu-client = "eiketsu_env.client_cli:main"
eiketsu-client-gui = "eiketsu_env.client_gui:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
